Bug Fix: page images are too big

--- a/src/index.scss
+++ b/src/index.scss
@@ -216,6 +216,7 @@ body {
   &__content,
   p {
     font-size: 14px;
+
     @media (min-width: 30rem) {
       margin: 0 auto 1rem;
       max-width: 512px;
@@ -225,6 +226,11 @@ body {
   &__content {
     > p {
       margin-bottom: 1.5rem;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
     }
   }
 }
